- add: hamburger menu for mobile responsiveness & overlay for main picture on landing page for text readability. - fix: navbar consistency for /home - fix: extra logout function in /home removed, since its already at all times in the navbar

--- a/frontend/src/pages/bookings.css
+++ b/frontend/src/pages/bookings.css
@@ -59,6 +59,8 @@ body {
   display: flex;
   justify-content: center;
   padding: 2rem;
+  flex: 1;
+  /* Takes remaining space to push footer down */
 }
 
 .mybookings-container {
